Paxtools-6: several changes  - added Resolver.synonymap setter/getter (for Validator project)  - improved normalizer (better URI for CV, BioSource)  - deleted paxtools-archetype module (old, does not worth upgrading)  - migrated to JUnit5 completely