@@ -30,7 +30,6 @@
     <module>sbgn-converter</module>
     <module>paxtools-console</module>
     <module>paxtools-query</module>
-    <module>paxtools-archetype</module>
     <module>json-converter</module>
     <module>pattern</module>
     <module>normalizer</module>
@@ -40,9 +39,10 @@
     <github.global.server>github</github.global.server>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <slf4j.version>1.7.25</slf4j.version>
-    <java.options>-Dfile.encoding=UTF-8</java.options>
+    <slf4j.version>2.0.7</slf4j.version>
     <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <developers>
@@ -330,7 +330,7 @@
           <testFailureIgnore>false</testFailureIgnore>
           <argLine>-ea</argLine>
           <!-- if using JDK >11 use the args below (can set _JAVA_OPTIONS instead) -->
-<!--          <argLine>-ea &#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED &#45;&#45;add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>-->
+          <argLine>-ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -358,11 +358,23 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13.2</version>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.9.3</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.9.3</version>
+        <scope>test</scope>
+      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>org.junit.vintage</groupId>-->
+<!--        <artifactId>junit-vintage-engine</artifactId>-->
+<!--        <version>5.9.3</version>-->
+<!--        <scope>test</scope>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>net.sourceforge.collections</groupId>
         <artifactId>collections-generic</artifactId>
@@ -462,10 +474,17 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.junit.vintage</groupId>-->
+<!--      <artifactId>junit-vintage-engine</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
